2007-04-26  Alp Toker  <alp@atoker.com>

Reviewed by Maciej.

        http://bugs.webkit.org/show_bug.cgi?id=13505
        Cast loses precision on x86_64

        * platform/graphics/cairo/GraphicsContextCairo.cpp:
        (WebCore::GraphicsContext::beginTransparencyLayer):
        (WebCore::GraphicsContext::endTransparencyLayer):
        Use a stack of opacity values instead of Cairo user data.


Canonical link: https://commits.webkit.org/17651@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21134 268f45cc-cd09-0410-ab3c-d52691b4dbfc